--- a/Day04.ipynb
+++ b/Day04.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "1)Create three variables (a,b,c) to same value of any integer & do the following\n",
+    "# 1)Create three variables (a,b,c) to same value of any integer & do the following\n",
     "a) Divide a by 10 b) Multiply b by 50 c) Add c value by 60"
    ]
   },
